--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,12 +20,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.ChooseGoalActivity" />
-        <activity android:name=".activities.ChooseSequenceActivity" />
-        <activity android:name=".activities.SaveResultsActivity" />
-        <activity android:name=".activities.TMTActivity" />
-        <activity android:name=".activities.UserFormActivity" />
-        <activity android:name=".activities.ViewResultsActivity"></activity>
+        <activity
+            android:name=".activities.ChooseGoalActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activities.ChooseSequenceActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.SaveResultsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.TMTActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.UserFormActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.ViewResultsActivity"
+            android:screenOrientation="portrait" ></activity>
     </application>
 
 </manifest>
